{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Normal",
            "id": "d8530d79-73c9-4342-a5ee-636f83c25bdb",
            "actions": [
                {
                    "name": "ChangeColorLeftRed",
                    "type": "Button",
                    "id": "0ecc624b-d009-4d78-a826-15aa363090f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeColorLeftGreen",
                    "type": "Button",
                    "id": "a36e7345-991d-47b3-9616-53f720971a99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrumLeft",
                    "type": "Button",
                    "id": "78c39cad-1c3a-42f8-aece-241d4a73e23d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeColorRightBlue",
                    "type": "Button",
                    "id": "37e71634-83aa-49f8-9c94-fecb3c5c6a1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeColorRightYellow",
                    "type": "Button",
                    "id": "be35f4b3-6b04-4b8d-a3e5-ad50be3e39bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrumRight",
                    "type": "Button",
                    "id": "443bb9a6-60aa-4a3a-a654-663f1c802ca5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrumWide",
                    "type": "Button",
                    "id": "ab85f1a6-0c0f-433e-b1ea-9c305ce524d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "d02e1f38-4673-49fe-8076-cb2baabb263a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2ca16511-7813-4bf1-8c9d-9ec5dbeccdd7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeColorLeftRed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "574d3f62-9851-440a-98c2-0d069a16c58c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeColorLeftGreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a798baad-de05-447f-b7d5-c44cc49a18b8",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeColorRightBlue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "133ccc1e-456b-48c4-a5eb-6094039db4cd",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeColorRightYellow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af7010b9-e79a-4513-9054-5c84935e066b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82b4e7f5-8abe-4d1a-afbb-23f8e1dd17ee",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StrumLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d7ee895-1ede-4e43-ad3f-97040e802add",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrumRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b724e94-d57e-40e9-868c-e8a821b084ed",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrumWide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}